update fonts, a couple other things

--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -153,7 +153,7 @@
 %-----------------------------------------------------------------
 % fonts
 %-----------------------------------------------------------------
-\RequirePackage[quiet]{fontspec}[2020/02/21]
+\RequirePackage[quiet]{fontspec}[2024/05/11]
 %\defaultfontfeatures{Scale=MatchLowercase}
 %-----------------------------------------------------------------
 % unicode-math
@@ -266,7 +266,7 @@ nabla=upright,
 
 \NewDocumentCommand {\AtkinsonHyperlegibleMainFont} {} {
 \setmainfont{AtkinsonHyperlegible}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -339,13 +339,15 @@ RawFeature={
 % and see the full license for all details.
 % https://fonts.google.com/specimen/Cormorant?preview.text_type=custom#license
 % version commit 83c64a4 2023-01-08
+% version 3.609 2020-10-12
+% version commit 1ed5b4ea25e760b7d0632fe4c5925077a6498507 2023-11-24
 
 % CormorantGaramond, CormorantInfant, CormorantSC,...?
 
 \NewDocumentCommand {\CormorantMainFont} {} {
 \setmainfont{Cormorant}[
 %\setmainfont{CormorantGaramond}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Medium,
 ItalicFont=*-Italic,
@@ -680,7 +682,7 @@ Numbers={OldStyle,Proportional},
 
 \NewDocumentCommand {\ErewhonMainFont} {} {
 \setmainfont{Erewhon}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -749,7 +751,7 @@ Numbers={OldStyle,Proportional},
 
 \NewDocumentCommand {\FiraGoMainFont} {} {
 \setmainfont{FiraGo}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -835,7 +837,7 @@ RawFeature={
 
 \NewDocumentCommand {\GaramondLibreMainFont} {} {
 \setmainfont{GaramondLibre}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -894,7 +896,7 @@ RawFeature={
 
 \NewDocumentCommand {\GFSArtemisiaMainFont} {} {
 \setmainfont{GFSArtemisia}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=GFSArtemisia,
 ItalicFont=*It,
@@ -947,7 +949,7 @@ RawFeature={
 
 \NewDocumentCommand {\GFSBodoniMainFont} {} {
 \setmainfont{GFSBodoni}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=GFSBodoni,
 ItalicFont=*It,
@@ -1000,7 +1002,7 @@ RawFeature={
 
 \NewDocumentCommand {\GFSDidotMainFont} {} {
 \setmainfont{GFSDidot}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=GFSDidot,
 ItalicFont=*Italic,
@@ -1055,7 +1057,7 @@ RawFeature={
 
 \NewDocumentCommand {\GFSNeohellenicMainFont} {} {
 \setmainfont{GFSNeohellenic}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=GFSNeohellenic,
 ItalicFont=*It,
@@ -1123,7 +1125,7 @@ RawFeature={
 
 \NewDocumentCommand {\KpRomanMainFont} {} {
 \setmainfont{KpRoman}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1201,7 +1203,7 @@ RawFeature={
 
 \NewDocumentCommand {\LatinModernMainFont} {} {
 \setmainfont{lmroman10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -1273,7 +1275,7 @@ RawFeature={
 
 \NewDocumentCommand {\LibertinusMainFont} {} {
 \setmainfont{LibertinusSerif}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1337,7 +1339,7 @@ RawFeature={
 % No bold small caps as of 2021-02-24
 \NewDocumentCommand {\NewComputerModernMainFont} {} {
 \setmainfont{NewCM10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1401,7 +1403,7 @@ RawFeature={
 
 \NewDocumentCommand {\STIXTwoMainFont} {} {
 \setmainfont{STIXTwoText}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1460,7 +1462,7 @@ RawFeature={
 
 \NewDocumentCommand {\BonumMainFont} {} {
  \setmainfont{texgyrebonum}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -1521,9 +1523,9 @@ StylisticSet={
 
 \NewDocumentCommand {\PagellaMainFont} {} {
 \setmainfont{TeXGyrePagella}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
-UprightFont=*-Regular,
+UprightFont=TeXGyrePagella-Regular,
 ItalicFont=*-Italic,
 BoldFont=*-Bold,
 BoldItalicFont=*-BoldItalic,
@@ -1582,7 +1584,7 @@ StylisticSet={
 
 \NewDocumentCommand {\ScholaMainFont} {} {
 \setmainfont{texgyreschola}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -1643,7 +1645,7 @@ StylisticSet={
 
 \NewDocumentCommand {\TermesMainFont} {} {
 \setmainfont{texgyretermes}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -1708,7 +1710,7 @@ StylisticSet={
 
 \NewDocumentCommand {\XITSMainFont} {} {
 \setmainfont{XITS}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1773,7 +1775,7 @@ Numbers={OldStyle,Proportional},
 \setsansfont{AtkinsonHyperlegible}[
 %Scale=MatchLowercase,
 Scale=MatchUppercase,
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1837,10 +1839,11 @@ RawFeature={
 % https://github.com/bBoxType/FiraGO
 % OFL-1.1 License
 % 1.0 Mar 14 2018
+%version 1.001 2020-03-18
 
 \NewDocumentCommand {\FiraGoSansFont} {} {
 \setsansfont{FiraGo}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -1926,7 +1929,7 @@ RawFeature={
 
 \NewDocumentCommand {\GFSNeohellenicSansFont} {} {
 \setsansfont{GFSNeohellenic.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=GFSNeohellenic,
 ItalicFont=*It,
@@ -1993,7 +1996,7 @@ StylisticSet={
 
 \NewDocumentCommand {\GilliusADFSansFont} {} {
 \setsansfont{GilliusADF}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Scale=1.05,
 Extension=.otf,
 UprightFont=*-Regular,
@@ -2050,7 +2053,7 @@ FontFace={ub}{sl}{*-BoldItalic},
 
 \NewDocumentCommand {\GilliusADFTwoSansFont} {} {
 \setsansfont{GilliusADFNo2}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Scale=1.05,
 Extension=.otf,
 UprightFont=*-Regular,
@@ -2117,7 +2120,7 @@ FontFace={ub}{sl}{*-BoldItalic},
 
 \NewDocumentCommand {\LatinModernSansFont} {} {
 \setsansfont{lmsans10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-oblique,
@@ -2180,10 +2183,11 @@ RawFeature={
 % OFL-1.1 License
 % Possiblly a harmonius set to use for all fonts
 % version 7.040 2021-03-01
+% version 7.051 2024-09-26
 
 \NewDocumentCommand {\LibertinusSansFont} {} {
 \setsansfont{LibertinusSans}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -2246,7 +2250,7 @@ RawFeature={
 % No bold small caps as of 2021-02-24
 \NewDocumentCommand {\NewComputerModernSansFont} {} {
 \setsansfont{NewCMSans10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Oblique,
@@ -2310,7 +2314,7 @@ RawFeature={
 % TeX Gyre Adventor <-  URW Gothic L <- ITC Avant Garde Gothic
 \NewDocumentCommand {\AdventorSansFont} {} {
 \setsansfont{texgyreadventor}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -2372,7 +2376,7 @@ StylisticSet={
 
 \NewDocumentCommand {\HerosSansFont} {} {
 \setsansfont{texgyreheros}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -2430,7 +2434,7 @@ StylisticSet={
 
 \NewDocumentCommand {\HerosCondensedSansFont} {} {
 \setsansfont{texgyreheroscn-regular.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -2499,7 +2503,7 @@ StylisticSet={
 
 \NewDocumentCommand {\KpSansSansFont} {} {
 \setsansfont{KpSans}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -2571,10 +2575,11 @@ RawFeature={
 % YsabeautInfant, YsabeauOffice, YsabeauSC,...?
 % TODO: Ysabeau In progress --- better alternative?
 % Version 2023-06-14
+% version commit c21395fc7e596c66e8e03daa09babf245005ce01 2024-11-27
 
 \NewDocumentCommand {\YsabeauSansFont} {} {
 \setsansfont{Ysabeau}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -2722,7 +2727,7 @@ RawFeature={
 
 \NewDocumentCommand {\InconsolataMonoFont} {} {
 \setmonofont{Inconsolata}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=Inconsolata-Medium,
 ItalicFont=Inconsolata-CondensedMedium,
@@ -2794,7 +2799,7 @@ RawFeature={+zero}, % slashed (actually dotted) zero
 
 \NewDocumentCommand {\KpMonoMonoFont} {} {
 \setmonofont{KpMono}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-Regular,
 ItalicFont=*-Italic,
@@ -2870,7 +2875,7 @@ RawFeature={
 
 \NewDocumentCommand {\LatinModernMonoFont} {} {
 \setmonofont{lmmonolt10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-oblique,
@@ -2956,9 +2961,9 @@ RawFeature={
 % No bold small caps as of 2021-02-24
 \NewDocumentCommand {\NewComputerModernMonoFont} {} {
 \setmonofont{NewCMMono10}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
-UprightFont=*-Regular,
+UprightFont = NewCMMono10-Regular.OTF,
 ItalicFont=*-Italic,
 BoldFont=*-Bold,
 BoldItalicFont=*-BoldOblique,
@@ -3016,7 +3021,7 @@ RawFeature={
 
 \NewDocumentCommand {\CursorMonoFont} {} {
 \setmonofont{texgyrecursor}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 UprightFont=*-regular,
 ItalicFont=*-italic,
@@ -3086,7 +3091,7 @@ StylisticSet={
 
 \NewDocumentCommand {\QTHeidelbergBlackLetterFont} {} {
 \newfontfamily\BlackLetterFont{QTHeidelbergType}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 Ligatures={Common,TeX},
 Numbers={OldStyle,Proportional},
@@ -3155,11 +3160,11 @@ Scale=MatchLowercase,
 
 \NewDocumentCommand {\AsanaMathFont} {} {
 \setmathfont{Asana-Math.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Numbers={OldStyle,Proportional},]
 %\setmathfont{XITSMath-Regular.otf}[range={``2010}]%\mathhyphen
 \setmathfont{XITSMath-Regular.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 range={\mathhyphen,},]
 %\setmathfont{Asana-Math.otf}[Numbers={OldStyle,Proportional},]
 }
@@ -3174,7 +3179,7 @@ range={\mathhyphen,},]
 
 \NewDocumentCommand {\ErewhonMathFont} {} {
 \setmathfont{Erewhon-Math.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 StylisticSet = {
 4, % better inequalities
@@ -3261,7 +3266,7 @@ Numbers={OldStyle,Proportional},
 % etc.
 \NewDocumentCommand {\KpMathMathFont} {} {
 \setmathfont{KpMath-Regular.otf}[
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
 Numbers={OldStyle,Proportional},
 StylisticSet={
@@ -3523,51 +3528,52 @@ RawFeature={
 % programming language fonts
 %-----------------------------------------------------------------
 % TODO: customize in the font families below?
+%
 
-\newfontfamily\pseudocodeFont{AtkinsonHyperlegible}[
-Scale=MatchLowercase,
-Path= c:/windows/fonts/ ,
-Extension=.otf,
-UprightFont=*-Regular,
-ItalicFont=*-Italic,
-BoldFont=*-Bold,
-BoldItalicFont=*-BoldItalic,
-SlantedFont=*-Italic,
-BoldSlantedFont=*-BoldItalic,
+\newfontfamily{\pseudocodeFont}{AtkinsonHyperlegible}[
+%Scale = MatchLowercase,
+%Path = c:/windows/fonts/,
+Extension = .otf ,%
+UprightFont = AtkinsonHyperlegible-Regular ,
+%ItalicFont = *-Italic ,
+%BoldFont = *-Bold ,
+%BoldItalicFont = *-BoldItalic ,
+%SlantedFont = *-Italic ,
+%BoldSlantedFont = *-BoldItalic ,
 %
-FontFace={ul}{n}{*-Regular},
-FontFace={el}{n}{*-Regular},
-FontFace={l}{n}{*-Regular},
-FontFace={sl}{n}{*-Regular},
-FontFace={m}{n}{*-Regular},
-FontFace={sb}{n}{*-Bold},
-FontFace={b}{n}{*-Bold},
-FontFace={eb}{n}{*-Bold},
-FontFace={ub}{n}{*-Bold},
-%
-FontFace={ul}{it}{*-Italic},
-FontFace={el}{it}{*-Italic},
-FontFace={l}{it}{*-Italic},
-FontFace={sl}{it}{*-Italic},
-FontFace={m}{it}{*-Italic},
-FontFace={sb}{it}{*-BoldItalic},
-FontFace={b}{it}{*-BoldItalic},
-FontFace={eb}{it}{*-BoldItalic},
-FontFace={ub}{it}{*-BoldItalic},
-%
-FontFace={ul}{sl}{*-Italic},
-FontFace={el}{sl}{*-Italic},
-FontFace={l}{sl}{*-Italic},
-FontFace={sl}{sl}{*-Italic},
-FontFace={m}{sl}{*-Italic},
-FontFace={sb}{sl}{*-BoldItalic},
-FontFace={b}{sl}{*-BoldItalic},
-FontFace={eb}{sl}{*-BoldItalic},
-FontFace={ub}{sl}{*-BoldItalic},
-%
-RawFeature={
-+case, % case sensitive forms
-},
+%FontFace={ul}{n}{*-Regular},
+%FontFace={el}{n}{*-Regular},
+%FontFace={l}{n}{*-Regular},
+%FontFace={sl}{n}{*-Regular},
+%FontFace={m}{n}{*-Regular},
+%FontFace={sb}{n}{*-Bold},
+%FontFace={b}{n}{*-Bold},
+%FontFace={eb}{n}{*-Bold},
+%FontFace={ub}{n}{*-Bold},
+%%
+%FontFace={ul}{it}{*-Italic},
+%FontFace={el}{it}{*-Italic},
+%FontFace={l}{it}{*-Italic},
+%FontFace={sl}{it}{*-Italic},
+%FontFace={m}{it}{*-Italic},
+%FontFace={sb}{it}{*-BoldItalic},
+%FontFace={b}{it}{*-BoldItalic},
+%FontFace={eb}{it}{*-BoldItalic},
+%FontFace={ub}{it}{*-BoldItalic},
+%%
+%FontFace={ul}{sl}{*-Italic},
+%FontFace={el}{sl}{*-Italic},
+%FontFace={l}{sl}{*-Italic},
+%FontFace={sl}{sl}{*-Italic},
+%FontFace={m}{sl}{*-Italic},
+%FontFace={sb}{sl}{*-BoldItalic},
+%FontFace={b}{sl}{*-BoldItalic},
+%FontFace={eb}{sl}{*-BoldItalic},
+%FontFace={ub}{sl}{*-BoldItalic},
+%%
+%RawFeature={
+%+case, % case sensitive forms
+%},
 ]
 
 %-----------------------------------------------------------------
@@ -3643,8 +3649,8 @@ RawFeature={
 
 % due to problems with FiraCode and newfontfamily,
 % and ugliness of of the other mono fonts I have at present
-% just use it via \setmonofont and \ttfamily (for now)
-% Note: this mean \clojureFont will be whatever the 
+% just used it via \setmonofont and \ttfamily (for now)
+% Note: this means \clojureFont will be whatever the
 % global mono font is.
 % TODO: either find a work-around for the Fira problems
 % or find another mono font I like.
@@ -3661,9 +3667,9 @@ RawFeature={
 
 \newfontfamily\schemeFont{NewCMMono10}[
 Scale=0.9,
-Path= c:/windows/fonts/ ,
+%Path= c:/windows/fonts/ ,
 Extension=.otf,
-UprightFont=*-Regular,
+UprightFont=NewCMMono10-Regular.otf,
 ItalicFont=*-Italic,
 BoldFont=*-Bold,
 BoldItalicFont=*-BoldOblique,
@@ -4746,8 +4752,10 @@ backref=true,
 
 \lstset{%
 keepspaces=true,%
-backgroundcolor={\color{GhostWhite}},
-captionpos=b,
+backgroundcolor={\color{GhostWhite}},%
+captionpos=b,%
+texcl=true,%
+mathescape=true,%
 %frame=tblr,
 }
 
