a few pizza refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -989,6 +989,24 @@ publisher={Oxford University P},
 year={1954},
 }
 
+@misc{ChefSteps:2016:LifeChangingPIzza,
+  title={Life-Changing Pizza Dough with Joe Heffernan of Seattle’s Independent Pizzeria},
+  url={https://www.youtube.com/watch?v=gijjMJiR_q0},
+  journal={YouTube},
+  author={ChefSteps},
+  year={2016},
+  month={June},
+  day = {20},
+}
+
+@misc{ChefSteps:2016:PizzaAtHome,
+  title={How to Get Pro-Level Pizza at Home with Joe Heffernan of Independent Pizzeria},
+  url={https://www.youtube.com/watch?v=LcD999Ci78E},
+  journal={YouTube},
+  author={ChefSteps},
+  year={2016},
+}
+
 @Online{Cheng:2020:Latest,
   author = {Eugenia Cheng},
   title  = {Latest Books},
@@ -3485,6 +3503,15 @@ year=1998
   number      = {7057},
   type        = {GMR},
   year        = {1990},
+}
+
+@book{MasiEtal:2015:NeapolitanPizza,
+  title={The Neapolitan Pizza. A Scientific Guide about the Artisanal Process},
+  author={Masi, P. and Romano, A. and Coccia, E.},
+  isbn={9788889972557},
+  url={https://books.google.com/books?id=f-hAjgEACAAJ},
+  year={2015},
+  publisher={Doppiavoce}
 }
 
 @Online{eom:AxiomaticSetTheory,
