Anderson ref; fix \citeAuthorYearTitle, etc, spacing

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -54,6 +54,17 @@
   year      = {1994},
 }
 
+@online{Hanson:2020:MITSchemeRef,
+  title={{MIT/GNU Scheme Refereence Manual
+for release 11.2}},
+  year={2020},
+  month={6},
+  day={16},
+  author={Chris Hanson and {the MIT Scheme Team} and
+{a cast of thousands}},
+  url={https://www.gnu.org/software/mit-scheme/},
+}
+
 @online{AdamsHanson:2020:MITSchemeUser,
 title={{MIT/GNU Scheme User’s Manual
 for release 11.2}},
@@ -63,16 +74,35 @@ day={16},
 author={Stephen Adams and Chris Hanson and {the MIT Scheme Team}},
 url={https://www.gnu.org/software/mit-scheme/},
 }
-
-@online{Hanson:2020:MITSchemeRef,
-title={{MIT/GNU Scheme Refereence Manual
-for release 11.2}},
-year={2020},
-month={6},
-day={16},
-author={Chris Hanson and {the MIT Scheme Team} and
-{a cast of thousands}},
-url={https://www.gnu.org/software/mit-scheme/},
+@online{PizzaNapoletana:2025:webpage,
+  title={{Associazione Verace Pizza Napoletana}},
+  year={2025},
+  author={{Associazione Verace Pizza Napoletana}},
+  url={https://www.pizzanapoletana.org/en/},
+  abstractNote={New Theory of the Earth is an interdisciplinary advanced textbook
+    on all aspects of the interior of the Earth and its origin, composition, and evolution:
+    geophysics, geochemistry, dynamics, convection, mineralogy, volcanism, energetics and thermal history.
+    This is the only book on the whole landscape of deep Earth processes
+    that ties together all the strands of the subdisciplines.
+    This book is a complete update of Anderson's Theory of the Earth (1989).
+    It includes dozens of new figures and tables.
+    A novel referencing system using Googlets is introduced
+    that allows immediate access to supplementary material via the internet.
+    There are new sections on tomography, self-organization, and new approaches to plate tectonics.
+    The paradigm/paradox approach to developing new theories is developed,
+    and controversies and contradictions have been brought more center-stage.
+    As with the Theory of the Earth, this new edition will prove to be a stimulating textbook
+    for advanced courses in geophysics, geochemistry, and planetary science,
+    and a supplementary textbook on a wide range of other advanced Earth science courses.
+    It will also be an essential reference and resource for all researchers in the solid Earth sciences.},
+}
+@online{PizzaNapoletana:2025:regulations,
+  title={{AVPN International Regulations for obtaining use
+of the collective trade mark Verace Pizza Napoletana
+(Vera Pizza Napoletana)}},
+  year={2025},
+  author={{Associazione Verace Pizza Napoletana}},
+  url={https://www.pizzanapoletana.org/public/pdf/Disciplinare-2024-ENG.pdf},
 }
 
 @online{Hanson:2011:MITSchemeSOS,
@@ -148,6 +178,14 @@ year={2019} }
   year      = {2011},
 }
 
+
+@book{Anderson:2007:NewTheory,
+  author       = {Anderson, Don L.},
+  title        = {New Theory of the Earth},
+  publisher    = {Cambridge University Press},
+  year         = 2007,
+  url  = {https://authors.library.caltech.edu/records/v1ca8-zj672},
+}
 @Book{AndersonEtAl:1992:LapackUsersGuide,
   author    = {E. Anderson and Z. Bal and C. Bischof and J. Demmel and J. Dongarra and J. Du Croz and A. Greenbaum and S. Hammarling and A. Mckenney and and S. Ostrouchov and D. Sorensen},
   title     = {{LAPACK} Users' Guide},
@@ -989,7 +1027,7 @@ publisher={Oxford University P},
 year={1954},
 }
 
-@misc{ChefSteps:2016:LifeChangingPIzza,
+@online{ChefSteps:2016:LifeChangingPIzza,
   title={Life-Changing Pizza Dough with Joe Heffernan of Seattle’s Independent Pizzeria},
   url={https://www.youtube.com/watch?v=gijjMJiR_q0},
   journal={YouTube},
@@ -999,7 +1037,7 @@ year={1954},
   day = {20},
 }
 
-@misc{ChefSteps:2016:PizzaAtHome,
+@online{ChefSteps:2016:PizzaAtHome,
   title={How to Get Pro-Level Pizza at Home with Joe Heffernan of Independent Pizzeria},
   url={https://www.youtube.com/watch?v=LcD999Ci78E},
   journal={YouTube},
@@ -3064,6 +3102,14 @@ it need not rely upon any set-theoretic underpinning.}},
   year    = {2008},
 }
 
+@book{lavoisier:1789:elements,
+  title={Elements of Chemistry: Preface},
+  author={Lavoisier, A.L.},
+  url={https://ocw.mit.edu/courses/sts-003-the-rise-of-modern-science-fall-2010/f35d23ec37d9782d68cdec1175a73435_MITSTS_003F10_read04_lavo.pdf},
+  year={1789},
+}
+
+https://ocw.mit.edu/courses/sts-003-the-rise-of-modern-science-fall-2010/f35d23ec37d9782d68cdec1175a73435_MITSTS_003F10_read04_lavo.pdf
 @Book{LawKelton:1991:Simulation,
   author    = {Averill M. Law and W. David Kelton},
   title     = {Simulation Modeling and Analysis},
